<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="25dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu"
        android:textSize="30sp"
        android:layout_marginBottom="20dp" />

    <Button
        android:id="@+id/buttonStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_start" />

    <Button
        android:id="@+id/buttonProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_profile" />

    <Button
        android:id="@+id/buttonSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_settings" />

    <Button
        android:id="@+id/buttonReport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_report" />

    <Button
        android:id="@+id/buttonExit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_exit" />

</LinearLayout>